Complete 01- Basics - Ray

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ project(PlayRTX)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(PlayRTX-Basics-Image src/01-Basics/01-Image/main.cpp)
+add_executable(PlayRTX-Basics-Ray src/01-Basics/02-Ray/main.cpp)
